--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,13 @@ coverage.xml
 
 # Django stuff:
 *.log
+*.pot
+*.pyc
+__pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+media
 
 # Flask stuff:
 instance/
@@ -130,3 +134,6 @@ dmypy.json
 
 # mac files
 .DS_Store
+
+#node modules
+node_modules
